--- a/game.html
+++ b/game.html
@@ -36,6 +36,11 @@
                 <div class="map-tile-title">Оборудование</div>
                 <div class="map-tile-desc">Рост и доп. поля</div>
             </div>
+            <div class="map-tile" data-location="animals">
+                <span class="icon">🐄</span>
+                <div class="map-tile-title">Животные</div>
+                <div class="map-tile-desc">Покупайте и собирайте продукты</div>
+            </div>
             <div class="map-tile" data-location="minigames">
                 <span class="icon">🎮</span>
                 <div class="map-tile-title">Миниигры</div>
@@ -53,6 +58,9 @@
             <div style="display: flex; align-items: center; gap: 10px;">
                 <div class="balance">
                     Монет: <span id="coinsLabel">100</span>
+                </div>
+                <div class="animal-products">
+                    🥛: <span id="milkLabel">0</span> 🥚: <span id="eggsLabel">0</span> 🧶: <span id="woolLabel">0</span>
                 </div>
                 <div class="level-system">
                     <div class="level-badge" onclick="showLevelInfo()" style="cursor: pointer;">
@@ -76,6 +84,7 @@
             <div class="detail-tab" data-tab="seeds">Семена</div>
             <div class="detail-tab" data-tab="tools">Инструменты</div>
             <div class="detail-tab" data-tab="equipment">Оборудование</div>
+            <div class="detail-tab" data-tab="animals">Животные</div>
             <div class="detail-tab" data-tab="minigames">Миниигры</div>
         </div>
 
@@ -99,6 +108,62 @@
         </div>
         <div style="margin-top:15px; display:flex; gap:10px;">
             <button type="button" class="btn btn-start" onclick="closeMinigame()">Закрыть</button>
+        </div>
+    </div>
+</div>
+
+<div class="modal" id="sellProductsModal">
+    <div class="modal-content">
+        <h2>Продажа продукции</h2>
+        <div class="products-list">
+            <div class="product-item">
+                <div class="product-header">
+                    <span class="product-emoji">🥛</span>
+                    <div class="product-name">Молоко</div>
+                </div>
+                <div class="product-info">
+                    <div>Количество: <span id="milkCount">0</span></div>
+                    <div>Цена за штуку: 3 монеты</div>
+                </div>
+                <div class="product-footer">
+                    <button class="product-sell-btn" onclick="sellProduct('milk', 1)">Продать 1</button>
+                    <button class="product-sell-btn" onclick="sellProduct('milk', 5)">Продать 5</button>
+                    <button class="product-sell-btn" onclick="sellProduct('milk', 'all')">Продать все</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <div class="product-header">
+                    <span class="product-emoji">🥚</span>
+                    <div class="product-name">Яйца</div>
+                </div>
+                <div class="product-info">
+                    <div>Количество: <span id="eggCount">0</span></div>
+                    <div>Цена за штуку: 2 монеты</div>
+                </div>
+                <div class="product-footer">
+                    <button class="product-sell-btn" onclick="sellProduct('eggs', 1)">Продать 1</button>
+                    <button class="product-sell-btn" onclick="sellProduct('eggs', 5)">Продать 5</button>
+                    <button class="product-sell-btn" onclick="sellProduct('eggs', 'all')">Продать все</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <div class="product-header">
+                    <span class="product-emoji">🧶</span>
+                    <div class="product-name">Шерсть</div>
+                </div>
+                <div class="product-info">
+                    <div>Количество: <span id="woolCount">0</span></div>
+                    <div>Цена за штуку: 5 монет</div>
+                </div>
+                <div class="product-footer">
+                    <button class="product-sell-btn" onclick="sellProduct('wool', 1)">Продать 1</button>
+                    <button class="product-sell-btn" onclick="sellProduct('wool', 5)">Продать 5</button>
+                    <button class="product-sell-btn" onclick="sellProduct('wool', 'all')">Продать все</button>
+                </div>
+            </div>
+        </div>
+        <div style="margin-top:20px; display:flex; gap:10px;">
+            <button type="button" class="btn btn-start" onclick="closeSellProductsModal()">Закрыть</button>
         </div>
     </div>
 </div>
