--- a/game.html
+++ b/game.html
@@ -5,10 +5,10 @@
 <title>FarmQuest - Ферма</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles.css">
-<script src="audio.js"></script>
-<script src="script.js"></script>
-<script src="snake-game.js"></script>
-<script src="tractor-game.js"></script>
+<script src="audio.js" defer></script>
+<script src="script.js" defer></script>
+<script src="snake-game.js" defer></script>
+<script src="tractor-game.js" defer></script>
 </head>
 <body>
 <div class="farm-container">
@@ -55,7 +55,7 @@
                 <h2 id="detailTitle">Поля</h2>
                 <small>Персонаж: <span id="currentCharLabel">Гость</span></small>
             </div>
-            <div style="display: flex; align-items: center; gap: 10px;">
+            <div class="header-right">
                 <div class="balance">
                     Монет: <span id="coinsLabel">100</span>
                 </div>
@@ -97,16 +97,16 @@
     <div class="modal-content">
         <h2 id="minigameTitle">Миниигры</h2>
         <p id="minigameSubtitle">Выберите игру: Рыбалка, Поймай морковку, Кролик-змейка или Трактор</p>
-        <div style="display:flex; gap:8px; margin-bottom:10px; justify-content:center; flex-wrap:wrap;">
+        <div class="minigame-buttons">
             <button class="seed-buy-btn" onclick="startFishingGame()">🎣 Рыбалка</button>
             <button class="seed-buy-btn" onclick="startCarrotGame()">🐰 Поймай морковку</button>
             <button class="seed-buy-btn" onclick="startSnakeGame()">🐇 Кролик-змейка</button>
             <button class="seed-buy-btn" onclick="startTractorGame()">🚜 Трактор</button>
         </div>
-        <div id="minigameArea" style="border-radius:12px; border:1px solid #e0f2e9; padding:10px; text-align:center; font-size:13px; color:#555; min-height:260px;">
+        <div id="minigameArea" class="minigame-area">
             Выберите миниигру выше, чтобы начать.
         </div>
-        <div style="margin-top:15px; display:flex; gap:10px;">
+        <div class="modal-buttons">
             <button type="button" class="btn btn-start" onclick="closeMinigame()">Закрыть</button>
         </div>
     </div>
@@ -162,7 +162,7 @@
                 </div>
             </div>
         </div>
-        <div style="margin-top:20px; display:flex; gap:10px;">
+        <div class="modal-buttons">
             <button type="button" class="btn btn-start" onclick="closeSellProductsModal()">Закрыть</button>
         </div>
     </div>
@@ -175,10 +175,10 @@
     <div class="reward-bonus" id="rewardBonus">
         Получено: <span id="rewardAmount">0</span> монет
     </div>
-    <p style="font-size: 13px; color: #777; margin-bottom: 20px;" id="rewardNext">
+    <p class="reward-next" id="rewardNext">
         До следующего уровня: <span id="nextLevelProgress">0</span> урожая
     </p>
-    <button class="btn btn-start" onclick="closeRewardPanel()" style="padding: 12px 30px;">
+    <button class="btn btn-start" onclick="closeRewardPanel()">
         Продолжить игру
     </button>
 </div>
