--- a/game.html
+++ b/game.html
@@ -41,6 +41,11 @@
                 <div class="map-tile-title">Животные</div>
                 <div class="map-tile-desc">Покупайте и собирайте продукты</div>
             </div>
+            <div class="map-tile" data-location="skills">
+                <span class="icon">📈</span>
+                <div class="map-tile-title">Навыки</div>
+                <div class="map-tile-desc">Прокачайте своего фермера</div>
+            </div>
             <div class="map-tile" data-location="minigames">
                 <span class="icon">🎮</span>
                 <div class="map-tile-title">Миниигры</div>
@@ -58,6 +63,9 @@
             <div class="header-right">
                 <div class="balance">
                     Монет: <span id="coinsLabel">100</span>
+                </div>
+                <div class="skill-points">
+                    Очки навыков: <span id="skillPointsLabel">0</span>
                 </div>
                 <div class="animal-products">
                     🥛: <span id="milkLabel">0</span> 🥚: <span id="eggsLabel">0</span> 🧶: <span id="woolLabel">0</span>
@@ -85,6 +93,7 @@
             <div class="detail-tab" data-tab="tools">Инструменты</div>
             <div class="detail-tab" data-tab="equipment">Оборудование</div>
             <div class="detail-tab" data-tab="animals">Животные</div>
+            <div class="detail-tab" data-tab="skills">Навыки</div>
             <div class="detail-tab" data-tab="minigames">Миниигры</div>
         </div>
 
